CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(hitecastrodcfocuser CXX C)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
SET(BIN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/bin")
SET(RULES_INSTALL_DIR "/etc/udev/rules.d")

FIND_PACKAGE(INDI REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${INDI_INCLUDE_DIR})

SET(indi_hitecastrodcfocuser_SRCS
	${CMAKE_CURRENT_SOURCE_DIR}/hitecastrodcfocuser.cpp
)

ADD_EXECUTABLE(indi_hitecastrodcfocuser ${indi_hitecastrodcfocuser_SRCS})

TARGET_LINK_LIBRARIES(indi_hitecastrodcfocuser ${INDI_DRIVER_LIBRARIES}

INSTALL(TARGETS indi_hitecastrodcfocuser RUNTIME DESTINATION bin )
INSTALL(FILES indi-hitecastrodcfocuser.xml DESTINATION ${INDI_DATA_DIR})
INSTALL(FILES 99-hitecastrodcfocuser.rules DESTINATION ${RULES_INSTALL_DIR})

